--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.0.0",
+    "express": "^4.16.3",
     "node-redshift": "^0.1.5"
   }
 }
